Fix gap between footer and bottom of page.

--- a/css/landing.scss
+++ b/css/landing.scss
@@ -35,7 +35,7 @@ html, body
 {
     margin: 0;
     padding: 0;
-    margin-bottom:30px;
+    //margin-bottom:30px;
 }
 html {
   height: 100%;
@@ -136,7 +136,7 @@ hr{
     width: calc(var(--nav-item-width) / 5) !important;
 }
 
-footer {
+.footer {
     background: darken($bg-color, 5%);
     width: 100%;
     margin-top: 1em;
